# First-Project

./: index.html
Zomato Project/: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
Zomato Project/Design/discovery_loading_state/: code.html
Zomato Project/Design/preference_dashboard/: code.html
Zomato Project/Design/results_dashboard/: code.html
Zomato Project/Design/settings_api_config/: code.html
Zomato Project/Design/ultra_premium_culinary_discovery/: DESIGN.md
Zomato Project/Design/zomato_ai_explorer_logo/: code.html
Zomato Project/Docs/: architecture.md  context.md  data-dictionary.md  edge-case.md  implementation-plan.md
Zomato Project/data/: ingest-report.json
Zomato Project/frontend/: index.html  vercel.json
Zomato Project/scratch/: e2e_api_test.py  index_original.html  query.py  test_api.py
Zomato Project/scripts/: filter.py  ingest.py  serve.py
Zomato Project/src/app/: __init__.py  config.py  main.py
Zomato Project/src/app/api/: __init__.py  deps.py  routes.py  schemas.py  service.py  stub.py
Zomato Project/src/app/data/: __init__.py  budget.py  city.py  constants.py  ingest.py  repository.py  transform.py
Zomato Project/src/app/filter/: __init__.py  models.py  scoring.py  service.py
Zomato Project/src/app/llm/: __init__.py  client.py  engine.py  prompts.py
Zomato Project/tests/: test_api.py  test_filter.py  test_llm_engine.py  test_merger.py  test_orchestrator.py  test_repository.py  test_transform.py
Zomato Project/tests/fixtures/: prompt_shape_golden.json
(+4 files in other folders)
