[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zomato-recommender"
version = "0.1.0"
description = "AI-powered restaurant recommendation (Zomato use case)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24.0"]

[tool.setuptools.packages.find]
where = ["src"]
